fix(theme): search result panel z-index

--- a/packages/preset-dumi/src/themes/default/SearchBar.less
+++ b/packages/preset-dumi/src/themes/default/SearchBar.less
@@ -25,6 +25,7 @@
     position: absolute;
     top: 100%;
     left: 0;
+    z-index: 10;
     margin: 8px 0 0;
     min-width: 280px;
     max-width: 400px;
